--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 SUNNYVALE, CA 94086">
 <meta name="data-map" content="1175+CRESPI+DR,+SUNNYVALE,+CA+94086">
   <meta name="description" content="Dedicated to community services, education, and direct relief, Flurry Lab, Inc.">
+<meta name="facebook-domain-verification" content="atfcyz02brm52rvie3sc45kfx9xpjb" />
 </head><body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
   <span>Dedicated to community services, education, and direct relief, Flurry Lab, Inc.</span><svg width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><circle cx="6" cy="6" r="5" fill="#2563eb"/></svg><img src="images/hero.jpg" width="1" height="1" alt="" loading="lazy"/>
